[project]
name = "ephetzner"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hcloud>=2.9.0",
    "boto3>=1.34.0",
    "paramiko>=3.5.0",
    "pydantic>=2.12.3",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "requests>=2.32.5",
]

[project.scripts]
ephetzner = "main:app"

[dependency-groups]
build = [
    "pyinstaller>=6.11.0",
]
dev = [
    "black>=25.9.0",
    "ipython>=9.6.0",
    "ruff>=0.14.2",
    "coverage>=7.6.0",
    "pyinstaller>=6.11.0",
]
